--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<div id="root"></div>
+    <button class="show age">Age</button>
+    <button class="show email">Email</button>
+    <button class="show phone">Phone</button>
+    <button id="getUser">GET ANOTHER USER</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
