--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<div id="root"></div>
     <button class="show age">Age</button>
     <button class="show email">Email</button>
-    <button class="show phone">Phone</button>
+    <button class="show phone">Phone</button><br>
     <button id="getUser">GET ANOTHER USER</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
