--- a/main.html
+++ b/main.html
@@ -7,11 +7,17 @@
 </head>
 
 <body>
-	<div id="root"></div>
-    <button class="show age">Age</button>
-    <button class="show email">Email</button>
-    <button class="show phone">Phone</button><br>
-    <button id="getUser">GET ANOTHER USER</button>
+    <div id="root">
+      <img id="show-img" src="" alt="">
+      <div id="showName"></div>
+      <div class="showhide age"></div>
+      <div class="showhide email"></div>
+      <div class="showhide phone"></div>
+      <button class="show age">Age</button>
+      <button class="show email">Email</button>
+      <button class="show phone">Phone</button><br>
+      <button id="getUser">GET ANOTHER USER</button>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
